# PicFinder

./: .gitattributes  .gitignore  MainWindow.py  MainWindow.ui  MainWindow_ui.py  README.md  ResultList.py  ResultList_ui.py  SettingsWindow.py  SettingsWindow.ui  SettingsWindow_ui.py  dist.py  main.py  pyproject.toml
.github/workflows/: python-app.yml
backend/: OCR.py  classification.py  db_ops.py  image_process.py  object_detection.py  qtworkers.py
backend/libsimple-windows-x64/dict/: idf.utf8  jieba.dict.utf8  stop_words.utf8
backend/libsimple-windows-x64/dict/pos_dict/: prob_emit.utf8  prob_start.utf8  prob_trans.utf8
backend/rapidOCR/: __init__.py  rapid.py
backend/resources/: label_list.py
backend/yolo/: YOLO.py  __init__.py  utils.py
models/: README.md
resources/: coco_class_index.json  imagenet_class_index.json  open_images_v7_class_index.json
src/: MainWindow.py  ResultList.py  ResultList.ui  SettingsWindow.py  SettingsWindow.ui  SettingsWindow_ui.py  build.py  main.py  pyproject.toml
src/backend/: db_ops.py  image_process.py  qtworkers.py
src/backend/libsimple/dict/: hmm_model.utf8  user.dict.utf8
src/backend/libsimple/libsimple-windows-x64/dict/: jieba.dict.utf8
src/backend/libsimple/libsimple-windows-x64/dict/pos_dict/: char_state_tab.utf8
src/backend/yolo/: YOLO.py  __init__.py  utils.py
src/dev/: download_libsimple.py  download_models.py  setup.iss
