[tool.poetry]
name = "picfinder"
version = "0.1.0"
description = ""
authors = ["HAL9000COM <f1226942353@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
onnxruntime = "^1.17.0"
pyside6 = "^6.6.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
