[tool.poetry]
name = "picfinder"
version = "0.1.0"
description = "A simple windows application to search for images in a directory."
authors = ["HAL9000COM <f1226942353@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pyside6 = "^6.6.2"
onnxruntime-directml = "^1.17.3"
rapidocr-onnxruntime = "^1.3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
notebook = "^6.5.3"
cx-freeze = "^6.15.16"
nuitka = "^2.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
