[tool.poetry]
name = "picfinder"
version = "0.3.0"
description = "A simple windows application to search for images in a directory."
authors = ["HAL9000COM <f1226942353@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pyside6 = "^6.6.2"

[tool.poetry.group.cpu]
optional=true

[tool.poetry.group.gpu]
optional=true

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.cpu.dependencies]
onnxruntime = "^1.19.2"
rapidocr-onnxruntime = "^1.3.24"

[tool.poetry.group.gpu.dependencies]
paddlepaddle-gpu = [
    { version = "==2.6.0.post120",platform="win32", source = "paddle" },
    { version = "==2.6.0.post120",platform="linux", source = "paddle-linux" }
]
setuptools= "^75.6.0" # required for paddlepaddle-gpu
onnxruntime-gpu = "^1.19.2"
rapidocr-paddle = "^1.3.27"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
notebook = "^6.5.3"
nuitka = "^2.1.5"
onnx = "1.16.1"
ultralytics = "^8.3"
onnxslim= "0.1.34"

[[tool.poetry.source]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/whl/windows/mkl/avx/stable.html"
priority = "explicit"

[[tool.poetry.source]]
name = "paddle-linux"
url = "https://www.paddlepaddle.org.cn/whl/linux/mkl/avx/stable.html"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
